fix(dashboard): no show horizontal scroll in the main menu

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -122,7 +122,7 @@ $list-item-icon-size: 48px;
     }
 
     .win-splitview-pane {
-        overflow: auto;
+        overflow: hidden;
     }
 
     .title {
